[package]
name = "bq769x2"
version = "0.1.0"
edition = "2024"
description = "BQ76952, BQ76942 and BQ769142 AFE HAL"

[dependencies]
bitfield-struct = "0.10"
bitfield_introspect = { path = "../bitfield_introspect" }
defmt = { version = "1", optional = true }

[features]
defmt = ["dep:defmt"]
bq76952 = []
bq76942 = []
bq769142 = []